# vstool

./: .gitignore  IT_WHITELIST_APPLICATION.md  Makefile  README.md  build-nuitka.ps1  build.ps1  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
src/vstool/: app.py  cancellation.py  com_utils.py  config.py  excel_diff.py  excel_legacy.py  i18n.py  pairing.py  pipeline.py  report.py  scanner.py  word_diff.py
src/vstool/gui/: confirm_pairs_dialog.py  main_window.py  worker.py
tests/: conftest.py  test_excel_diff.py  test_pairing.py  test_pipeline.py  test_report.py  test_scanner.py
