[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vstool"
version = "0.1.0"
description = "本地 Windows 工具：按文件名配对对比 A、B 两个文件夹中的 Word/Excel 文件"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "vstool" }]
dependencies = [
    "PySide6>=6.6",
    "openpyxl>=3.1",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-docx>=1.1",
    "pyinstaller>=6.5; sys_platform == 'win32'",
]

[project.scripts]
vstool = "vstool.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
